--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
