--- a/package.json
+++ b/package.json
@@ -9,25 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@lowkey/react-native-gif": "^3.1.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.43",
+    "expo-av": "~15.0.2",
+    "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-font": "~13.0.4"
+    "react-native-svg": "15.8.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "typescript": "^5.3.3",
-    "@types/react": "~18.3.12"
+    "@types/react": "~18.3.12",
+    "expo-svg-transformer": "^2.0.1",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
